align it with xstake

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "bustabit-game-verifier",
+  "name": "xstake-game-verifier",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview  --host 0.0.0.0"
   },
   "dependencies": {
     "@noble/curves": "^1.3.0",
